--- a/WPFApp1/CustomControl/TextBoxWithPlaceHolder.xaml
+++ b/WPFApp1/CustomControl/TextBoxWithPlaceHolder.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WPFApp1.CustomControls"
-             DataContext="{Binding Source={StaticResource VmLocator}, Path = LoginPageViewModel}"
+             xmlns:local="clr-namespace:WPFApp1.CustomControl"
              mc:Ignorable="d" 
              MinWidth="300"
              x:Name="_this">
