--- a/WPFApp1/Pages/AllTTNPage.xaml
+++ b/WPFApp1/Pages/AllTTNPage.xaml
@@ -1,31 +1,30 @@
-﻿<Page x:Class="WPFApp1.Pages.AllContractsPage"
+﻿<Page x:Class="WPFApp1.Pages.AllTTNPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WPFApp1.Pages"
+      xmlns:local="clr-namespace:WPFApp1.Pages" 
+      xmlns:CustomControls="clr-namespace:WPFApp1.CustomControl"
       mc:Ignorable="d" 
-      DataContext="{Binding Source={StaticResource VmLocator}, Path = AllContractsViewModel}"
-      d:DesignHeight="450" d:DesignWidth="1000"
-      Title="AllContractsPage">
+      DataContext="{Binding Source={StaticResource VmLocator}, Path = AllTTNPageViewModel}"
+      d:DesignHeight="450" d:DesignWidth="900"
+      Title="AllTTNPage">
 
-    
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="35"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-
-            <Grid Grid.Row="0" Height="auto">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="auto"/>
-                </Grid.ColumnDefinitions>
+        <Grid Grid.Row="0" Height="auto">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
 
 
             <Button Grid.Column="0" 
@@ -36,47 +35,48 @@
                     Command="{Binding GoToMainReestrPage}"/>
             <Button Grid.Column="1" 
                     Margin="1 2 1 2" 
+                    Foreground="White"
                     Content="Реестр Договоров"
-                    Style="{StaticResource Header }"/>
+                    Style="{StaticResource Header }"
+                    Command="{Binding GoToContractsReestr}" />
             <Button Grid.Column="2" 
                     Margin="1 2 1 2" 
                     Content="Реестр Тендеров"
                     Foreground="White"
                     Style="{StaticResource Header }"
-                    Command="{Binding GoToTenderReestr}"/>
-               
+                    Command="{Binding GoToTenderReestr }"/>
+
             <Button Grid.Column="3"    
                     Margin="1 2 10 2"     
                     Content="Реестр Актов"    
-                    Foreground="White"  
-                    Style="{StaticResource Header }" 
-                    Command="{Binding GoToTTNReestr}"/>
-            </Grid>
+                    Style="{StaticResource Header }" />
+        </Grid>
         <Grid Grid.Row="1">
 
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Фильтры"
-                               Width="50"
-                               Height="20"
-                               Margin="5 2 2 2"/>
-                <TextBox Name="ContractFilteredText"
-                         TextChanged="ContractFilteredText_TextChanged"
-                             Margin="2 2 2 2"
-                             Height="20"
-                             Width="150"/>
-                </StackPanel>
-        
+                <TextBlock Text="Фильтры"  
+                           Width="50"    
+                           Height="20"  
+                           Margin="10 2 2 2"/>
+               
+                <CustomControls:TextboxWithPlaceHolderForFilters   x:Name="TTNFilteredText" 
+                         Margin="5 1 2 1"
+                         PlaceHolder = "  По номеру Накладной"
+                         Height="20"                          
+                         Width="200"/>
+            </StackPanel>
+
         </Grid>
         <Grid Grid.Row="2" x:Name="GridRow2">
             <Grid.Resources>
-                <CollectionViewSource x:Key="ContracsCollection"
-                                      x:Name="ContracsCollection"
-                                      Source="{Binding AllContracts}"
-                                      Filter="ContractCollection_Filter"/>
+                <CollectionViewSource x:Key="TTNCollection"
+                                      x:Name="TTNCollection"
+                                      Source="{Binding AllTTNs}"
+                                      />
             </Grid.Resources>
 
             <ScrollViewer VerticalScrollBarVisibility="Auto">
-                <ItemsControl ItemsSource="{Binding Source={StaticResource ContracsCollection}}">
+                <ItemsControl ItemsSource="{Binding Source={StaticResource TTNCollection}}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Border Margin="8 3 8 3" 
@@ -87,7 +87,7 @@
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="120"/>
-                                        <ColumnDefinition Width="200"/>
+                                        <ColumnDefinition Width="350"/>
                                         <ColumnDefinition Width="auto"/>
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="Auto"/>
@@ -95,63 +95,64 @@
                                     <StackPanel Orientation="Vertical"
                                                 Grid.Column="0"
                                                 VerticalAlignment="Center">
-                                        <TextBlock Text="Номер Договора"
+                                        <TextBlock Text="Номер Накладной"
                                                    HorizontalAlignment="Center"
                                                    Foreground="#a3a3a4"/>
-                                        <TextBlock Text="{Binding Contract_Number}"
+                                        <TextBlock Text="{Binding Act_number}"
                                                    FontWeight="SemiBold"
                                                    HorizontalAlignment="Center"/>
-                                        
+
                                     </StackPanel>
                                     <StackPanel Grid.Column="1" Orientation="Vertical" >
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Дата Подписания:"
-                                                       Foreground="#a3a3a4"/>
-                                            <TextBlock  VerticalAlignment="Center" 
-                                                        TextAlignment="Center"
-                                                        HorizontalAlignment="Stretch"
-                                                        Margin="4,0,0,0" 
-                                                        FontSize="11"
-                                                        FontWeight="SemiBold"
-                                                        Text="{Binding Contract_Signing , StringFormat={}{0:d-M-yyyy}}"/>
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Дата Начала:        "
-                                                       Foreground="#a3a3a4"/>
-                                            <TextBlock Grid.Column="2" 
-                                                       VerticalAlignment="Center" 
-                                                       TextAlignment="Center"
-                                                       HorizontalAlignment="Stretch"
-                                                       Margin="5,0,0,0"
-                                                       FontSize="11"
-                                                       FontWeight="SemiBold"
-                                                       Text="{Binding start_date, StringFormat={}{0:d-M-yyyy}}"/>
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Дата Окончания :"
-                                                       Foreground="#a3a3a4"/>
-                                            <TextBlock Grid.Column="3" 
-                                                       VerticalAlignment="Center"
-                                                       TextAlignment="Center" 
-                                                       HorizontalAlignment="Stretch"
-                                                       Margin="6,0,0,0" 
-                                                       FontSize="13"
-                                                       FontWeight="SemiBold"
-                                                       Foreground="Green"
-                                                       Text="{Binding finish_date, StringFormat={}{0:d-M-yyyy}}"/>
-                                        </StackPanel>
-                                    </StackPanel>
-                                  
-                                    <StackPanel Grid.Column="2" Orientation="Vertical">
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Предмет Договра: "
+                                            <TextBlock Text="Дата подписания:"
                                                        Foreground="#a3a3a4"/>
                                             <TextBlock  VerticalAlignment="Center" 
                                                         TextAlignment="Center"
                                                         HorizontalAlignment="Left"
-                                                        Margin="39,0,0,0" 
+                                                        Margin="146,0,0,0" 
+                                                        FontSize="11"
                                                         FontWeight="SemiBold"
-                                                        Text="{Binding subject_of_contract}"/>
+                                                        Text="{Binding Date_of_accept , StringFormat={}{0:d-MM-yyyy}}"/>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="Номер Акта выполненных работ:"
+                                                       Foreground="#a3a3a4"/>
+                                            <TextBlock Grid.Column="2" 
+                                                       VerticalAlignment="Center" 
+                                                       TextAlignment="Center"
+                                                       HorizontalAlignment="Left"
+                                                       Margin="5,0,0,0"
+                                                       FontSize="11"
+                                                       FontWeight="SemiBold"
+                                                       Text=""/>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="Номер Договора:"
+                                                       Foreground="#a3a3a4"/>
+                                            <TextBlock Grid.Column="3" 
+                                                       VerticalAlignment="Center"
+                                                       TextAlignment="Center" 
+                                                       HorizontalAlignment="Left"
+                                                       Margin="145,0,0,0" 
+                                                       FontSize="11"
+                                                       FontWeight="SemiBold"
+                                                       Text="{Binding Contracts.Contract_Number}"/>
+                                        </StackPanel>
+                                    </StackPanel>
+
+                                    <StackPanel Grid.Column="2" Orientation="Vertical">
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="Сумма по Договору(с НДС руб.): "
+                                                       Foreground="#a3a3a4"/>
+                                            <TextBlock  VerticalAlignment="Center" 
+                                                        TextAlignment="Center"
+                                                        HorizontalAlignment="Left"
+                                                        Margin="5,0,0,0" 
+                                                        FontWeight="SemiBold"
+                                                        Foreground="DarkGreen"
+                                                        FontSize="13"
+                                                        Text="{Binding Value_with_NDS}"/>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Заказчик: "
@@ -159,9 +160,9 @@
                                             <TextBlock  VerticalAlignment="Center" 
                                                         TextAlignment="Center"
                                                         HorizontalAlignment="Left"
-                                                        Margin="86,0,0,0" 
+                                                        Margin="131,0,0,0" 
                                                         FontWeight="SemiBold"
-                                                        Text="{Binding Main_Reestr.Customers.Customer_Name}"/>
+                                                        Text="{Binding Contracts.Main_Reestr.Customers.Customer_Name}"/>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Наименование Объекта: "
@@ -169,9 +170,9 @@
                                             <TextBlock  VerticalAlignment="Center" 
                                                         TextAlignment="Center"
                                                         HorizontalAlignment="Left"
-                                                        Margin="3,0,0,0" 
+                                                        Margin="49,0,0,0" 
                                                         FontWeight="SemiBold"
-                                                        Text="{Binding Object_name}"/>
+                                                        Text="{Binding Contracts.Main_Reestr.Object_name}"/>
                                         </StackPanel>
                                         <!--<StackPanel Orientation="Horizontal" >
                                             <Expander Header="Доп. Инфо по Договору"
@@ -197,7 +198,7 @@
                                         </StackPanel>-->
                                     </StackPanel>
 
-                                    <Button Command="{Binding RelativeSource={RelativeSource AncestorType=Page}, Path=DataContext.EditContract}" CommandParameter="{Binding}" Grid.Column="5" 
+                                    <Button Command="{Binding RelativeSource={RelativeSource AncestorType=Page}, Path=DataContext.EditCurrentTTN}" CommandParameter="{Binding}" Grid.Column="5" 
                                             Content="Редактировать"
                                             Height="40"
                                             Width="auto"
@@ -217,9 +218,6 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </ScrollViewer>
-            </Grid>
         </Grid>
-
-
-    
+    </Grid>
 </Page>
