--- a/WPFApp1/Pages/MainDataReestrPage.xaml
+++ b/WPFApp1/Pages/MainDataReestrPage.xaml
@@ -46,14 +46,13 @@
                     Style="{StaticResource Header}"
                     Foreground="White"
                     Command="{Binding GoToTenderReestr}"/>
-            
+
             <Button Grid.Column="3" 
                     Margin="1 2 10 2" 
                     Content="Реестр Актов"
-                    VerticalAlignment="Stretch" 
-                     Style="{StaticResource Header}"
                     Foreground="White"
-                    HorizontalAlignment="Stretch"/>
+                    Style="{StaticResource Header}"
+                    Command="{Binding GoToTTNReestr}" />
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel Orientation="Horizontal">
@@ -66,10 +65,10 @@
                         <Style TargetType="{x:Type Button}">
                             <Setter Property="Background" Value="#FF01A3FF" />
                             <Setter Property="Foreground" Value="White" />
-                            <Setter Property="FontSize" Value="15" />
+                            <Setter Property="FontSize" Value="18" />
                             <Setter Property="SnapsToDevicePixels" Value="True" />
-
-
+                            <Setter Property="TextOptions.TextRenderingMode" Value="ClearType"/>
+                            <Setter Property="TextOptions.TextFormattingMode" Value="Ideal"/>
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="{x:Type Button}">
@@ -78,7 +77,7 @@
                                                 <ContentPresenter x:Name="MyContentPresenter" 
                                               Content="{TemplateBinding Content}"                 
                                               HorizontalAlignment="Center" 
-                                              TextBlock.FontSize="12"
+                                              TextBlock.FontSize="14"
                                               VerticalAlignment="Center" 
                                               Margin="0,0,0,0" />
                                             </Grid>
@@ -119,6 +118,8 @@
             </StackPanel>
         </Grid>
         <Grid Grid.Row="2">
+            
+
             <Expander Header="Поиск:"
                       Margin="10 5 10 1">
                 <Border BorderThickness="1"
@@ -143,7 +144,7 @@
             </Expander>
         </Grid>
         <Grid Grid.Row="3" 
-              Margin="5,20,5,5"
+              Margin="5,5,5,5"
               x:Name="GridRow3">
             <Grid.Resources>
                 <CollectionViewSource x:Key="ProjektCollection"
@@ -162,16 +163,26 @@
                                         BorderThickness="1" 
                                         CornerRadius="3">
                                     <Grid>
+
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="100"/>
                                             <ColumnDefinition Width="150"/>
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="Auto"/>
                                         </Grid.ColumnDefinitions>
+                                        
+                                        <StackPanel Orientation="Vertical"
+                                                Grid.Column="0"
+                                                VerticalAlignment="Center">
+                                            <TextBlock Text="Номер Проекта"
+                                                   HorizontalAlignment="Center"
+                                                   Foreground="#a3a3a4"/>
+                                            <TextBlock Text="{Binding Doc_Number, UpdateSourceTrigger=PropertyChanged}"
+                                                   FontWeight="SemiBold"
+                                                   HorizontalAlignment="Center"/>
 
-                                        <TextBlock Grid.Column="0" 
-                                                   VerticalAlignment="Center" 
-                                                   Text="{Binding Doc_Number, UpdateSourceTrigger=PropertyChanged}"/>
+                                        </StackPanel>
+
                                         <StackPanel Grid.Column="1" 
                                                     HorizontalAlignment="Center" 
                                                     VerticalAlignment="Center"
@@ -180,6 +191,7 @@
                                                        Foreground="#a3a3a4"
                                                        HorizontalAlignment="Center"/>
                                             <TextBlock TextAlignment="Center"
+                                                       FontWeight="SemiBold"
                                                        Text="{Binding stage, UpdateSourceTrigger=PropertyChanged}"/>
                                         </StackPanel>
                                         <StackPanel Grid.Column="2"
@@ -194,6 +206,7 @@
                                                             TextAlignment="Center" 
                                                             HorizontalAlignment="Left"
                                                             Margin="68,0,0,0" 
+                                                            FontWeight="SemiBold"
                                                             Text="{Binding project_type, UpdateSourceTrigger=PropertyChanged}"/>
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal">
@@ -205,6 +218,7 @@
                                                             TextAlignment="Center" 
                                                             HorizontalAlignment="Left"
                                                             Margin="2 0 0 0"
+                                                            FontWeight="SemiBold"
                                                             Text="{Binding Object_name, UpdateSourceTrigger=PropertyChanged}"/>
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal">
@@ -216,6 +230,7 @@
                                                             TextAlignment="Center" 
                                                             HorizontalAlignment="Left"
                                                             Margin="19 0 0 0 "
+                                                            FontWeight="SemiBold"
                                                             Text="{Binding Customers.Customer_Name , UpdateSourceTrigger=PropertyChanged}"/>
                                             </StackPanel>
                                             <Expander Header="Ответственные за проект">
@@ -232,8 +247,16 @@
                                                 Content="Редактировать"
                                                 Height="40"
                                                 Width="auto"
-                                                VerticalAlignment="Top"/>
-
+                                                TextOptions.TextFormattingMode="Display"
+                                                RenderOptions.BitmapScalingMode="NearestNeighbor"
+                                                VerticalAlignment="Top">
+                                            <Button.Effect>
+                                                <DropShadowEffect ShadowDepth="5"
+                                                              Direction="260"  
+                                                              Color="DarkGray">
+                                                </DropShadowEffect>
+                                            </Button.Effect>
+                                        </Button>
                                     </Grid>
                                 </Border>
                             </DataTemplate>
