--- a/WPFApp1/Pages/Admin/EditResponsPersonsPage.xaml
+++ b/WPFApp1/Pages/Admin/EditResponsPersonsPage.xaml
@@ -19,7 +19,7 @@
                       Style="{StaticResource DataGridStyle1}"
                       FontSize="12"
                       FontWeight="SemiBold"
-                      VerticalAlignment="Top"
+                      VerticalAlignment="Stretch"
                       ItemsSource="{Binding ResponsPersons}">
                 <DataGrid.Columns >
                     <DataGridTextColumn Header="Фамилия"
@@ -38,7 +38,7 @@
                                         Width="*" 
                                         Binding="{Binding Path= PersonStats.Role}"/>
                     <DataGridCheckBoxColumn Header="Работает Да/Нет"
-                                            Width="50"
+                                            Width="150"
                                             IsThreeState="False"
                                             Binding="{Binding Path=Activity}">
                     </DataGridCheckBoxColumn>
@@ -50,10 +50,7 @@
                                 <StackPanel Orientation="Horizontal">
                                     <Button Content="Редактировать"
                                             Margin="3 1 3 1"
-                                            
                                             Command="{Binding RelativeSource={RelativeSource AncestorType=Page}, Path= DataContext.EditUser}" CommandParameter="{Binding}"/>
-                                    <Button Content="Удалить" Margin="15 1 3 1"
-                                            Command="{Binding RelativeSource={RelativeSource AncestorType=Page}, Path= DataContext.RemoveCurrentUser}" CommandParameter="{Binding}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
