--- a/WPFApp1/DialogWindows/AddNewTTNWindowDialog.xaml
+++ b/WPFApp1/DialogWindows/AddNewTTNWindowDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPFApp1.DialogWindows.AddNewContractWindowDialog"
+﻿<Window x:Class="WPFApp1.DialogWindows.AddNewTTNWindowDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,18 +6,19 @@
         xmlns:local="clr-namespace:WPFApp1.DialogWindows"
         mc:Ignorable="d"
         FontSize="14"
-        DataContext="{Binding Source={StaticResource VmLocator}, Path=AddNewConrtactViewModel}"
+        DataContext="{Binding Source={StaticResource VmLocator}, Path=AddNewTTNPageViewModel}"
         ResizeMode="NoResize"
-        Title="Добавление Договора" 
+        Title="Добавление ТТН" 
         Height="300" Width="300"
         Background="WhiteSmoke"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        x:Name="TTN">
 
 
     <Grid>
         <DockPanel>
             <TextBlock DockPanel.Dock="Top" 
-                       Text="Добавить новый Договор"
+                       Text="Добавить новую Накладную"
                        Margin="5 10 5 0"
                        TextAlignment="Center"/>
             <TextBlock DockPanel.Dock="Top"
@@ -25,25 +26,38 @@
                        Margin="5 30 5 0"
                        TextAlignment="Center"/>
             <TextBox DockPanel.Dock="Top"
-                     Text="{Binding ObjektNumber}"
+                     Text="{Binding CurrentObjekt.Doc_Number}"
                      FontWeight="Medium"
                      Margin="10 5 10 0"
                      IsReadOnly="True"
                      TextAlignment="Center"/>
+            <TextBlock Text="Регистрационный номер Договора"
+                       DockPanel.Dock="Top"
+                       Margin="10 5 10 0"
+                       Height="18" 
+                       TextAlignment="Center"/>
+            <ComboBox x:Name="Group" 
+                       DockPanel.Dock="Top"
+                       Margin=" 10 5 10 0" Height="22" 
+                       ItemsSource="{Binding Contracts}"
+                       DisplayMemberPath="Contract_Number" 
+                       SelectedValuePath="ID"
+                       SelectedValue="{Binding ContractKey, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+
             <TextBlock DockPanel.Dock="Top"
-                       Text="Учетный Номер Договора"
+                       Text="Учетный Номер Накладной"
                        Margin="5 10 5 0"
                        TextAlignment="Center"/>
             <TextBox DockPanel.Dock="Top"
-                     Text="{Binding ContractNumber, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                     Text="{Binding TTNNumber, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                      FontWeight="Medium"
                      Margin="10 5 10 0"
                      TextAlignment="Center"/>
-            <DockPanel Margin=" 80 20 5 5">
-                <Button Content="Добавить Договор" 
+            <DockPanel Margin=" 60 20 5 5">
+                <Button Content="Добавить Накладную" 
                         VerticalAlignment="Bottom"
                         Margin="5 5 5 0"
-                        Command="{Binding AddNewContract}"
+                        Command="{Binding AddNewTTN}"
                         IsDefault="True"/>
                 <Button Content="Выйти"
                         VerticalAlignment="Bottom"
