--- a/WPFApp1/DialogWindows/AddNewTenderWindowDialog.xaml
+++ b/WPFApp1/DialogWindows/AddNewTenderWindowDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPFApp1.DialogWindows.AddNewContractWindowDialog"
+﻿<Window x:Class="WPFApp1.DialogWindows.AddNewTenderWindowDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,18 +6,19 @@
         xmlns:local="clr-namespace:WPFApp1.DialogWindows"
         mc:Ignorable="d"
         FontSize="14"
-        DataContext="{Binding Source={StaticResource VmLocator}, Path=AddNewConrtactViewModel}"
+        DataContext="{Binding Source={StaticResource VmLocator}, Path=AddNewTenderViewModel}"
         ResizeMode="NoResize"
-        Title="Добавление Договора" 
+        Title="Добавление Тендера" 
         Height="300" Width="300"
         Background="WhiteSmoke"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        x:Name="Tender">
 
 
     <Grid>
         <DockPanel>
             <TextBlock DockPanel.Dock="Top" 
-                       Text="Добавить новый Договор"
+                       Text="Добавить новый Тендер"
                        Margin="5 10 5 0"
                        TextAlignment="Center"/>
             <TextBlock DockPanel.Dock="Top"
@@ -31,19 +32,19 @@
                      IsReadOnly="True"
                      TextAlignment="Center"/>
             <TextBlock DockPanel.Dock="Top"
-                       Text="Учетный Номер Договора"
+                       Text="Учетный Номер Тендера"
                        Margin="5 10 5 0"
                        TextAlignment="Center"/>
             <TextBox DockPanel.Dock="Top"
-                     Text="{Binding ContractNumber, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                     Text="{Binding TenderNumber, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                      FontWeight="Medium"
                      Margin="10 5 10 0"
                      TextAlignment="Center"/>
             <DockPanel Margin=" 80 20 5 5">
-                <Button Content="Добавить Договор" 
+                <Button Content="Добавить Тендер" 
                         VerticalAlignment="Bottom"
                         Margin="5 5 5 0"
-                        Command="{Binding AddNewContract}"
+                        Command="{Binding AddNewTender}"
                         IsDefault="True"/>
                 <Button Content="Выйти"
                         VerticalAlignment="Bottom"
