--- a/WPFApp1/DialogWindows/AddNewContractWindowDialog.xaml
+++ b/WPFApp1/DialogWindows/AddNewContractWindowDialog.xaml
@@ -35,7 +35,7 @@
                        Margin="5 10 5 0"
                        TextAlignment="Center"/>
             <TextBox DockPanel.Dock="Top"
-                     Text="{Binding ContractNumber, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                     Text="{Binding ContractNumber, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, TargetNullValue = 0, FallbackValue = 0}"
                      FontWeight="Medium"
                      Margin="10 5 10 0"
                      TextAlignment="Center"/>
