--- a/WPFApp1/DialogWindows/AddNewProjektWindowDialog.xaml
+++ b/WPFApp1/DialogWindows/AddNewProjektWindowDialog.xaml
@@ -8,7 +8,7 @@
         Title="Новый Проект" 
         x:Name="Projekt"
         DataContext="{Binding Source={StaticResource VmLocator}, Path = AddNewObjektPageViewModel}"
-        Height="440"
+        Height="450"
         Width="410"
         ResizeMode="NoResize"
         Background="WhiteSmoke"
@@ -109,7 +109,7 @@
                       FontWeight="SemiBold"
                       VerticalAlignment="Stretch"
                   Margin="3 1 3 3"
-                      Height="135"
+                      Height="140"
                       ItemsSource="{Binding RespPersons}">
                 <DataGrid.Columns >
                     <DataGridTextColumn Header="Фамилия"
@@ -135,8 +135,10 @@
             </DataGrid>
         </DockPanel>
         <StackPanel Orientation="Horizontal"
-                    HorizontalAlignment="Right">
-            <Button Margin="5 1 70 1" 
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Margin="1 5 1 1">
+            <Button Margin="5 1 75 1" 
                     Height="30"
                     Width="100"
                     Content="Сохранить"
