--- a/WPFApp1/DialogWindows/ContractRespPersonsWindowDialog.xaml
+++ b/WPFApp1/DialogWindows/ContractRespPersonsWindowDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPFApp1.DialogWindows.EditADMPersonsByProjectWindowDialog"
+﻿<Window x:Class="WPFApp1.DialogWindows.ContractRespPersonsWindowDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,13 +6,12 @@
         xmlns:local="clr-namespace:WPFApp1.DialogWindows"
         mc:Ignorable="d"
         Title="Редактирование ответственных за Проект"
-        x:Name="ENG_ContractPers"
+        x:Name="ENG_PersonList"
         Height="400" 
         Width="400"
-        DataContext="{Binding Source={StaticResource VmLocator}, Path=EditADMPersonsByProjectViewModel}"
+        DataContext="{Binding Source={StaticResource VmLocator}, Path=Contract_ENG_RespPersonsViewModel}"
         ResizeMode="NoResize"
-        Background="WhiteSmoke"
-        WindowStartupLocation="CenterScreen">
+        Background="WhiteSmoke">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height=" 40"/>
@@ -95,7 +94,7 @@
                     </ListBox>
                 </StackPanel>
             </Grid>
-            </Grid>
+        </Grid>
         <DockPanel Grid.Row="2"
                    HorizontalAlignment="Stretch">
             <Button Content="Сохранить"
