--- a/WPFApp1/Pages/MainDataReestrPage.xaml
+++ b/WPFApp1/Pages/MainDataReestrPage.xaml
@@ -235,36 +235,21 @@
                                             </StackPanel>
                                             <Expander>
                                                 <Expander.Header>
-
-                                                    
-                                                        <StackPanel Orientation="Horizontal"
-                                                                        Grid.Column="1"
-                                                                    OverridesDefaultStyle="True">
-
-
-                                                            <ItemsControl ItemsSource="{Binding Respons_persons}">
-                                                                <ItemsControl.ItemTemplate>
-                                                                    <DataTemplate>
-                                                                        <Button Background="Transparent"
-                                                                                    BorderBrush="Transparent"
-                                                                          
-                                                                                    Content="{Binding Respons_persons}">
-                                                                            <Button.ContentTemplate>
-                                                                                <DataTemplate>
-
-                                                                                    <Path Data="{Binding Source={StaticResource User}}"
-                                                                                   Stretch="UniformToFill"
-                                                                                      Fill="CadetBlue" />
-                                                                                </DataTemplate>
-                                                                            </Button.ContentTemplate>
-
-                                                                        </Button>
-                                                                    </DataTemplate>
-                                                                </ItemsControl.ItemTemplate>
-                                                            </ItemsControl>
-                                                        </StackPanel>
-
-                                                 
+                                                    <TextBlock Text="Ответственные"/>
+                                                    <!--<StackPanel Orientation="Horizontal" >
+                                                        <Button Background="Transparent"               
+                                                                BorderBrush="Transparent"           
+                                                                Content="{Binding Respons_persons}"
+                                                                HorizontalAlignment="Left">
+                                                            <Button.ContentTemplate>
+                                                                <DataTemplate>
+                                                                    <Path Data="{Binding Source={StaticResource User}}"           
+                                                                          Stretch="UniformToFill"     
+                                                                          Fill="CadetBlue" />
+                                                                </DataTemplate>
+                                                            </Button.ContentTemplate>
+                                                        </Button>
+                                                    </StackPanel>-->
                                                 </Expander.Header>
 
                                                 <StackPanel Orientation="Vertical">
